--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@ function search() {
 <div class='intro' id='container'>
     <div class='slides'>
       <div class='number-order'>1/4</div>
-         <img src="C:\Users\jiang\Desktop\Website\index\image1.jpg"/>
+         <img src="img\image1.jpg"/>
          <p class='desc'>Hi, I am Iris Yushan Li !</p>
     </div>
 
     <div class='slides'>
             <div class='number-order'>2/4</div>
-                <img src="C:\Users\jiang\Desktop\Website\index\image2.jpg"/>
+                <img src="img\image2.jpg"/>
                 <p class='desc'>My friends and I in the Hershey Park</p>
         </div>
 
