--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@ function search() {
 
     <div class='slides'>
             <div class='number-order'>3/4</div>
-                <img src="C:\Users\jiang\Desktop\Website\index\image3.jpg"/>
+                <img src="img\image3.jpg"/>
                 <p class='desc'>My parents and I in D.C.</p>
         </div>
 
     <div class='slides'>
             <div class='number-order'>4/4</div>
-                <img src="C:\Users\jiang\Desktop\Website\index\image4.jpg" />
+                <img src="img\image4.jpg" />
                 <p class='desc'>I live in the Saint James Community</p>
         </div>
 
@@ -242,11 +242,9 @@ function showSlides(n) {
         <i class="fas fa-grin-squint"></i>
         <h1 id='h1-icon'><br><strong>Hi, </strong>I'm Iris.</h1>
         <h1 id='h1-no-icon'><br>Nice to meet you!</h1>
-        <p><br>As Spain discovered gold in the Western Hemisphere,
-        Portugal spread Christianity in West Africa, and Portugal established
-        a monopolized trade in the Indian Ocean, Spain and Portugal’s growing power
-        inspired the exploration of new lands,
-        the conversion of Christianity, and the creation of mercantilism.我随便写的<strong>
+        <p><br>###########################################
+		##########################################
+		####################Need to fill this<strong>
         home page/intro page</strong> </p>
     </article>
 </div>
@@ -256,7 +254,7 @@ function showSlides(n) {
 <!-- more information about volunteer classes, volunteer works, clubs, and activities -->
 <div class='intro-image' id='intro-image-class'>
     <video controls>
-        <source src="C:\Users\jiang\Desktop\Website\index\intro_classes.mp4" type="video/mp4" />
+        <source src="img\intro_classes.mp4" type="video/mp4" />
     </video>
     <p class='caption'>There are always memorable moments in my classes...for example, launching a rocket!
     <br><a href='#'>Read more about my classes</a></p>
@@ -264,8 +262,8 @@ function showSlides(n) {
 
 <div class='intro-image' id='intro-image-volunteer'>
     <div id='container-volunteer'>
-    <img src="C:\Users\jiang\Desktop\Website\index\intro_volunteer.jpg" alt="The volunteer work in PingYao" />
-        <p class='text' id="text-volunteer">This is when I was in PingYao...捡重点活动放在首页</p>
+    <img src="img\intro_volunteer.jpg" alt="The volunteer work in PingYao" />
+        <p class='text' id="text-volunteer">This is when I was in PingYao...</p>
     </div>
     <p class='caption' id='volunteer-caption'>I enjoy the pleasure of helping others and being needed by others...
     <br><a href='#'>Read more about my volunteer service</a></p>
@@ -273,8 +271,8 @@ function showSlides(n) {
 
 <div class='intro-image' id='intro-image-activity'>
     <div id='container-activity'>
-    <img src="C:\Users\jiang\Desktop\Website\index\intro_activity.jpg" alt="The string ensemble is having rehearsal" />
-    <p class='text' id="text-activity">I was in the String Ensemble...捡重点活动放在首页</p>
+    <img src="img\intro_activity.jpg" alt="The string ensemble is having rehearsal" />
+    <p class='text' id="text-activity">I was in the String Ensemble...</p>
     </div>
     <p class='caption' id='activity-caption'>My school life is full of arts, science, and literature...
     <br><a href='#'>Read more about my other activities</a></p>
