--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function typeWriter() {
         <div class="dropdown-content" id='club-content'>
             <div class="row">
                 <div class="column">
-                 <a href='file:///C:/Users/jiang/Desktop/Website/section_newspaper.html'>Newspaper Club</a>
+                 <a href='section_newspaper.html'>Newspaper Club</a>
 				 </div>
 				 <div class="column">
                  <a href="#">WISTEM (Women STEM Club)</a>
