--- a/section_newspaper.html
+++ b/section_newspaper.html
@@ -25,7 +25,7 @@
 
     <div class='tab'>
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/website_index.html'><button>
+    <a href='index.html'><button>
         <i class='fa fa-home'></i> <span></span>Home
     </button></a>
     <div class="dropdown-content">
@@ -34,7 +34,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_newspaper.html#intro'>
+    <a href='section_newspaper.html#intro'>
     <button>I am a part of the Jacobite Newspaper Club</button>
     </a>
     <div class="dropdown-content">
@@ -44,7 +44,7 @@
 
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_newspaper.html#article1'>
+    <a href='section_newspaper.html#article1'>
     <button>Coronavirus Second Wave in Europe</button></a>
     <div class="dropdown-content">
        <p>Coronavirus Second Wave in Europe</p>
@@ -52,7 +52,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_newspaper.html#article2'>
+    <a href='section_newspaper.html#article2'>
     <button>2020 in Review: Moments that Made US Smile during the Pandemic</button></a>
     <div class="dropdown-content">
        <p>2020 in Review: Moments that Made US Smile during the Pandemic</p>
@@ -60,7 +60,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_newspaper.html#article3'>
+    <a href='section_newspaper.html#article3'>
     <button>Earth Month: Tips for going green in April</button></a>
     <div class="dropdown-content">
        <p>Earth Month: Tips for going green in April</p>
@@ -76,15 +76,13 @@
     <h1>Jacobite Newspaper Club</h1>
     <div class='articles'>
         <article id='intro'>
-            <br><p>As Spain discovered gold and silver in the Western Hemisphere,
-        Portugal spread Christianity in West Africa, and Portugal established
-        a monopolized trade in the Indian Ocean, Spain and Portugal’s growing power
-        inspired late European global power in terms of the exploration of new lands,
-        the conversion of Christianity, and the creation of mercantilism.我随便写的<br>
+            <br><p>#############################
+            #######################################
+            ################################<br>
         </p>
         </article>
         <div class='images'>
-         <img id='image0' src="C:\Users\jiang\Desktop\Website\newspaper\Newspaper_intro.jpg"
+         <img id='image0' src="newspaper_img\Newspaper_intro.jpg"
          alt="All the articles I wrote in 4 years" />
         </div>
     </div>
@@ -135,11 +133,11 @@
             </p>
          </article>
          <div class='images'>
-         <img id='image1'src="C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article1.png"
+         <img id='image1'src="newspaper_img\Newspaper_article1.png"
          alt="Vendome Square was empty due to the new restrictions in France" />
          <div class='desc' id='desc1'>Vendome Square was empty due to the new restrictions in France</div>
 
-         <img id='image2' src="C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article1_publish.jpg"
+         <img id='image2' src="newspaper_img\Newspaper_article1_publish.jpg"
          alt='My published article'  />
          <div class='desc' id='desc2'>My article published on the Newspaper</div>
          </div>
@@ -172,7 +170,7 @@
             </p>
 
             <div class='images'>
-            <img id='image3' src='C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article2_1.jpg'
+            <img id='image3' src='newspaper_img\Newspaper_article2_1.jpg'
             alt='Photo by Anthony Behar'>
          <div class='desc' id='desc3'>Cheers for the frontline workers during the COVID pandemic</div>
             </div>
@@ -189,7 +187,7 @@
              </p>
 
              <div class='images'>
-               <img id='image4' src='C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article2_2.jpg'
+               <img id='image4' src='newspaper_img\Newspaper_article2_2.jpg'
              alt='Painting “Social Distancing in the Mission” by Jennifer M. Potter'>
          <div class='desc' id='desc4'>Artworks showing hopes during the COVID pandemic</div>
              </div>
@@ -205,7 +203,7 @@
                 they became the most splendid sea of flowers in life.
              </p>
 '              <div class='images'>
-               <img id='image5' src='C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article2_3.png'
+               <img id='image5' src='newspaper_img\Newspaper_article2_3.png'
                 alt='Photo from Douban'>
          <div class='desc' id='desc5'>Love found in flowers</div>
             </div>
@@ -240,9 +238,9 @@
             this year, let’s start to make a plan to celebrate it!</p>
 
          <div class='images'>
-         <img id='image6' src="C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article3_1.png" />
-         <img id='image7' src="C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article3_2.png" />
-         <img id='image8' src="C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article3_3.jpg" />
+         <img id='image6' src="newspaper_img\Newspaper_article3_1.png" />
+         <img id='image7' src="newspaper_img\Newspaper_article3_2.png" />
+         <img id='image8' src="newspaper_img\Newspaper_article3_3.jpg" />
          </div>
 
             <ol>
@@ -267,7 +265,7 @@
             </ol>
          </article>
          <div class='images'>
-         <img id='image9' src="C:\Users\jiang\Desktop\Website\newspaper\Newspaper_article3_publish.jpg"
+         <img id='image9' src="newspaper_img\Newspaper_article3_publish.jpg"
         alt='My published article' />
         <div class='desc' id='desc9'>My article published on the Newspaper</div>
         </div>
