--- a/section_newspaper.html
+++ b/section_newspaper.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
-    <link rel="stylesheet" href="file:///C:/Users/jiang/Desktop/Website/stylesheet_newspaper.css">
+    <link rel="stylesheet" href="stylesheet_newspaper.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
     <link rel="icon" type="image/x-icon" href="C:\Users\jiang\Desktop\Website\large_user5492897_3826049_20.ico" >
     <title>Iris Li in Jacobite Newspaper Club</title>
