--- a/section_PingYao.html
+++ b/section_PingYao.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
     <!-- css link -->
-    <link rel="stylesheet" href="file:///C:/Users/jiang/Desktop/Website/Stylesheet_PingYao.css" />
+    <link rel="stylesheet" href="Stylesheet_PingYao.css" />
     <!-- icon -->
     <link rel="icon" type="image/x-icon" href="C:\Users\jiang\Desktop\Website\large_user5492897_3826049_20.ico" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
@@ -27,7 +27,7 @@
 
     <div class='tab'>
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/website_index.html'><button>
+    <a href='index.html'><button>
         <i class='fa fa-home'></i> <span></span>Home
     </button></a>
     <div class="dropdown-content">
@@ -36,7 +36,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_PingYao.html#intro'>
+    <a href='section_PingYao.html#intro'>
     <button>My Experience in Pingyao Ancient Ciy</button>
     </a>
     <div class="dropdown-content">
@@ -46,7 +46,7 @@
 
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_PingYao.html#laquerware'>
+    <a href='section_PingYao.html#laquerware'>
     <button>Push Light Lacquerware</button></a>
     <div class="dropdown-content">
        <p>Push Light Lacquerware</p>
@@ -54,7 +54,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_PingYao.html#wadang'>
+    <a href='section_PingYao.html#wadang'>
     <button>Protection of the Pottery Roof Tiles, Wadang</button></a>
     <div class="dropdown-content">
        <p>Protection of the Pottery Roof Tiles, Wadang</p>
@@ -62,7 +62,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_PingYao.html#paper-cut'>
+    <a href='file:section_PingYao.html#paper-cut'>
     <button>Paper-Cut Art</button></a>
     <div class="dropdown-content">
        <p>Paper-Cut Art</p>
@@ -70,7 +70,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_PingYao.html#research'>
+    <a href='section_PingYao.html#research'>
     <button>Research: How Can We Protect Our Cultural Heritage?</button></a>
     <div class="dropdown-content">
        <p>Research: How Can We Protect Our Cultural Heritage?</p>
@@ -78,7 +78,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_PingYao.html#issue'>
+    <a href='section_PingYao.html#issue'>
     <button>Research: The Life of the People in Pingyao Nowadays</button></a>
     <div class="dropdown-content">
        <p>Research: The Life of the People in Pingyao Nowadays</p>
@@ -92,32 +92,32 @@
 <div class="container">
   <div class="slides">
     <div class="numbertext">1 / 6</div>
-    <img src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_1.jpg">
+    <img src="pingyao_img\Pingyao_gallery_1.jpg">
   </div>
 
   <div class="slides">
     <div class="numbertext">2 / 6</div>
-    <img src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_2.jpg">
+    <img src="pingyao_img\Pingyao_gallery_2.jpg">
   </div>
 
   <div class="slides">
     <div class="numbertext">3 / 6</div>
-    <img src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_3.jpg">
+    <img src="pingyao_img\Pingyao_gallery_3.jpg">
   </div>
 
   <div class="slides">
     <div class="numbertext">4 / 6</div>
-    <img src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_4.jpg">
+    <img src="pingyao_img\Pingyao_gallery_4.jpg">
   </div>
 
  <div class="slides">
     <div class="numbertext">5 / 6</div>
-    <img src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_5.jpg">
+    <img src="pingyao_img\Pingyao_gallery_5.jpg">
   </div>
 
   <div class="slides">
     <div class="numbertext">6 / 6</div>
-    <img src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_6.jpg">
+    <img src="pingyao_img\Pingyao_gallery_6.jpg">
   </div>
 
   <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -129,27 +129,27 @@
 
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_1.jpg"
+      <img class="demo cursor" src="pingyao_img\Pingyao_gallery_1.jpg"
       onclick="currentSlide(1)" alt="The Voluntary Certification from The Green Lion">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_2.jpg"
+      <img class="demo cursor" src="pingyao_img\Pingyao_gallery_2.jpg"
       onclick="currentSlide(2)" alt="Painting Lacquerwares">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_3.jpg"
+      <img class="demo cursor" src="pingyao_img\Pingyao_gallery_3.jpg"
       onclick="currentSlide(3)" alt="Researching on the Cultural Heritage">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_4.jpg"
+      <img class="demo cursor" src="pingyao_img\PingYao\Pingyao_gallery_4.jpg"
       onclick="currentSlide(4)" alt="Visiting the Lacquerware Artifacts">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_5.jpg"
+      <img class="demo cursor" src="pingyao_img\Pingyao_gallery_5.jpg"
       onclick="currentSlide(5)" alt="An old CD shop in Pingyao">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_gallery_6.jpg"
+      <img class="demo cursor" src="pingyao_img\Pingyao_gallery_6.jpg"
       onclick="currentSlide(6)" alt="A cat lying on the street">
     </div>
   </div>
@@ -209,12 +209,12 @@ function showSlides(n) {
           employment issues and transportation issues.</p>
         </article>
         <div class='images'>
-         <img id='image1'src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_intro_1.jpg"
+         <img id='image1'src="pingyao_img\Pingyao_intro_1.jpg"
          alt="the Ancient City of Pingyao" />
 
-         <img id='image2' src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_intro_2.jpg"
+         <img id='image2' src="pingyao_img\Pingyao_intro_2.jpg"
          alt='My volunteer group in Pingyao'  />
-          <img id='image3' src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_intro_3.jpg"
+          <img id='image3' src="pingyao_img\Pingyao_intro_3.jpg"
          alt='My volunteer group in Pingyao'  />
          </div>
 </div>
@@ -270,23 +270,23 @@ function showSlides(n) {
          </article>
 
          <div class='images'>
-         <img id='image4' src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_lacquerware_1.jpg"
+         <img id='image4' src="pingyao_img\Pingyao_lacquerware_1.jpg"
         alt='A piece of lacquerware furniture' />
         <div class='desc' id='desc1'>A piece of lacquerware furniture</div>
 
-         <img id='image5' src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_lacquerware_2.jpg"
+         <img id='image5' src="pingyao_img\Pingyao_lacquerware_2.jpg"
         alt='Raw Lacquer' />
         <div class='desc' id='desc2'>Raw Lacquer</div>
 
-         <img id='image6' src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_lacquerware_3.jpg"
+         <img id='image6' src="pingyao_img\Pingyao_lacquerware_3.jpg"
         alt='A female worker was scraping dust' />
         <div class='desc' id='desc3'>A female worker was scraping dust</div>
 
-         <img id='image8' src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_lacquerware_5.jpg"
+         <img id='image8' src="pingyao_img\Pingyao_lacquerware_5.jpg"
         alt='An artisan was painting on a lacquerware' />
         <div class='desc' id='desc5'>An artisan was painting on a lacquerware</div>
 
-         <img id='image9' src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_lacquerware_6.jpg"
+         <img id='image9' src="pingyao_img\Pingyao_lacquerware_6.jpg"
         alt='I was painting' />
         <div class='desc' id='desc6'>I was painting</div>
 
@@ -347,7 +347,7 @@ function showSlides(n) {
     </article>
 
     <div class='images'>
-         <img id='image13'src="C:\Users\YS\Desktop\Website\PingYao\Pingyao_papercut_1.jpg"
+         <img id='image13'src="pingyao_img\Pingyao_papercut_1.jpg"
          alt="Our photo with the paper-cutting lady in the center" />
          <div class='desc' id='desc10'>Our photo with the paper-cutting lady in the center</div>
     </div>
@@ -382,16 +382,16 @@ function showSlides(n) {
     </article>
 
     <div class='images'>
-         <img id='image14'src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_research_1.jpg"
+         <img id='image14'src="pingyao_img\Pingyao_research_1.jpg"
          alt="Interview the shopkeepers" />
          <div class='desc' id='desc11'>Interview the shopkeepers</div>
-         <img id='image15'src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_research_2.jpg"
+         <img id='image15'src="pingyao_img\Pingyao_research_2.jpg"
          alt="Observe the patterns on the old buildings" />
          <div class='desc' id='desc12'>Observe the patterns on the old buildings</div>
-         <img id='image16'src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_research_3.jpg"
+         <img id='image16'src="pingyao_img\Pingyao_research_3.jpg"
          alt="Observe the patterns on the old buildings" />
          <div class='desc' id='desc13'>Observe the patterns on the old buildings</div>
-         <img id='image17'src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_research_4.jpg"
+         <img id='image17'src="pingyao_img\Pingyao_research_4.jpg"
          alt="The pattern on a piece of Wadang tile" />
          <div class='desc' id='desc14'>The pattern on a piece of Wadang tile</div>
     </div>
@@ -418,10 +418,10 @@ function showSlides(n) {
     </article>
 
     <div class='images'>
-         <img id='image18'src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_issue_1.jpg"
+         <img id='image18'src="pingyao_img\Pingyao_issue_1.jpg"
          alt="The peeling wall of the buildings and the crooked mailbox" />
          <div class='desc' id='desc15'>The peeling wall of the buildings and the crooked mailbox</div>
-         <img id='image19'src="C:\Users\jiang\Desktop\Website\PingYao\Pingyao_issue_2.jpg"
+         <img id='image19'src="pingyao_img\Pingyao_issue_2.jpg"
          alt="The commercial street" />
          <div class='desc' id='desc16'>The commercial street</div>
     </div>
