--- a/section_stringemsemble.html
+++ b/section_stringemsemble.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
     <!-- css link -->
-    <link rel="stylesheet" href="file:///C:/Users/jiang/Desktop/Website/Stylesheet_stringemsemble.css" />
+    <link rel="stylesheet" href="Stylesheet_stringemsemble.css" />
     <!-- icon -->
     <link rel="icon" type="image/x-icon" href="C:\Users\jiang\Desktop\Website\large_user5492897_3826049_20.ico" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
@@ -24,7 +24,7 @@
 	<header>
 		<p class='heading'>Iris Yushan Li</p>
 		<div class='tab'>
-        <a href='file:///C:/Users/jiang/Desktop/Website/website_index.html'><button>
+        <a href='index.html'><button>
         <i class='fa fa-home'></i> <span></span>Home
         </button></a>
 
@@ -33,10 +33,10 @@
        </div>
 	</header>
 	
-	<img id='image1'src="C:\Users\jiang\Desktop\Website\intro_activity.jpg"
+	<img id='image1'src="img\intro_activity.jpg"
          alt="violin" />
 		 
-	<img id='image1'src="C:\Users\jiang\Desktop\Website\stringemsemble_2.jpg"
+	<img id='image1'src="string_img\stringemsemble_2.jpg"
          alt="violin" />
 </body>
 
