--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function typeWriter() {
                 </div>
                 <div class="column">
                     <h3>10th Grade</h3>
-                    <a href="file:///C:/Users/jiang/Desktop/Website/section_class_engineering.html">Engineering and Design</a>
+                    <a href="section_class_engineering.html">Engineering and Design</a>
                     <a href="#">Second </a>
                 </div>
                 <div class="column">
@@ -93,7 +93,7 @@ function typeWriter() {
                  <a href="#">WISTEM (Women STEM Club)</a>
 				 </div>
 				 <div class="column">
-                 <a href="file:///C:/Users/jiang/Desktop/Website/section_stringemsemble.html">String Emsemble</a>
+                 <a href="section_stringemsemble.html">String Emsemble</a>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@ function typeWriter() {
         <div class="dropdown-content" id='sports-content'>
             <div class="row">
                 <div class="column">
-                    <a href="file:///C:/Users/jiang/Desktop/Website/section_liferecord.html">Field Hockey</a>
+                    <a href="section_liferecord.html">Field Hockey</a>
 				</div>
 				<div class="column">
                     <a href='#'>Dance</a>
@@ -118,7 +118,7 @@ function typeWriter() {
         <div class="dropdown-content" id='volunteer-content'>
             <div class="row">
                 <div class="column">
-                    <a href="file:///C:/Users/jiang/Desktop/Website/section_PingYao.html">PingYao</a>
+                    <a href="section_PingYao.html">PingYao</a>
                 </div>
                 <div class="column">
                     <a href="#">Translate books for the Blinds</a>
