--- a/section_PingYao.html
+++ b/section_PingYao.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
     <!-- css link -->
-    <link rel="stylesheet" href="Stylesheet_PingYao.css" />
+    <link rel="stylesheet" href="stylesheet_PingYao.css" />
     <!-- icon -->
     <link rel="icon" type="image/x-icon" href="C:\Users\jiang\Desktop\Website\large_user5492897_3826049_20.ico" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
