--- a/section_class_engineering.html
+++ b/section_class_engineering.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
-    <link rel="stylesheet" href="file:///C:/Users/jiang/Desktop/Website/stylesheet_engineering.css">
+    <link rel="stylesheet" href="stylesheet_engineering.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
     <link rel="icon" type="image/x-icon" href="C:\Users\jiang\Desktop\Website\large_user5492897_3826049_20.ico" >
     <title>Iris Li in Engineering Class</title>
@@ -26,7 +26,7 @@
 
     <div class='tab'>
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/website_index.html'><button>
+    <a href='index.html'><button>
         <i class='fa fa-home'></i> <span></span>Home
     </button></a>
     <div class="dropdown-content">
@@ -35,7 +35,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_class_engineering.html#article1'>
+    <a href='section_class_engineering.html#article1'>
     <button>Rocket</button>
     </a>
     <div class="dropdown-content">
@@ -45,7 +45,7 @@
 
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_class_engineering.html#article2'>
+    <a href='section_class_engineering.html#article2'>
     <button>Bridge</button></a>
     <div class="dropdown-content">
        <p>Bridge</p>
@@ -53,7 +53,7 @@
     </div>
 
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/section_class_engineering.html#article2'>
+    <a href='section_class_engineering.html#article2'>
     <button>Airplane</button></a>
     <div class="dropdown-content">
        <p>Airplane</p>
@@ -93,7 +93,7 @@ function showSlides(n) {
     <h1>Engineering and Design Class</h1>
     <div class='articles'>
         <article id='intro'>
-		<br><p>fun project! blablablablablabla</p>
+		<br><p>fun project! ####################################################</p>
 		</article>
 	</div>
 	
@@ -104,28 +104,28 @@ function showSlides(n) {
 <div class="container">
   <div class="slides">
     <div class="numbertext">1 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_rocket1.png" alt='Design Freeform fins'>
+    <img src="engineering_img\engineering_rocket1.png" alt='Design Freeform fins'>
 	<div class="caption"><p>Design Freeform fins</p></div>
 	</div>
   
 
   <div class="slides">
     <div class="numbertext">2 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_rocket2.png" alt='Decide the number of elliptical fins'>
+    <img src="engineering_img\engineering_rocket2.png" alt='Decide the number of elliptical fins'>
 	<div class="caption"><p>Decide the number of elliptical fins</p></div>
 	</div>
   
 
   <div class="slides">
     <div class="numbertext">3 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_rocket3.jpg" alt='Body tube'>
+    <img src="engineering_img\engineering_rocket3.jpg" alt='Body tube'>
 	<div class="caption"><p>Body tube</p></div>
 	</div>
   
 
   <div class="slides">
     <div class="numbertext">4 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_rocket4.jpg" alt='Parachute'>
+    <img src="engineering_img\engineering_rocket4.jpg" alt='Parachute'>
 	<div class="caption"><p>Parachute</p></div>
 	</div>
   
@@ -133,7 +133,7 @@ function showSlides(n) {
  <div class="slides">
     <div class="numbertext">5 / 5</div>
     <video controls>
-			<source src="C:\Users\jiang\Desktop\Website\index\intro_classes.mp4" type="video/mp4" />
+			<source src="img\intro_classes.mp4" type="video/mp4" />
 	</video>
 	<div class="caption"><p>Decide the number of elliptical fins</p></div>
   </div>
@@ -186,35 +186,35 @@ function showSlides(n) {
 	<div class="container">
   <div class="bridge_slides">
     <div class="bridge_numbertext">1 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_bridge1.png" alt='Building the bridge'>
+    <img src="engineering_img\engineering_bridge1.png" alt='Building the bridge'>
 	<div class="caption"><p>Building the bridge</p></div>
 	</div>
   
 
   <div class="bridge_slides">
     <div class="bridge_numbertext">2 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_bridge2.jpg" alt='Put loads on the bridge'>
+    <img src="engineering_img\engineering_bridge2.jpg" alt='Put loads on the bridge'>
 	<div class="caption"><p>Put loads on the bridge</p></div>
 	</div>
   
 
   <div class="bridge_slides">
     <div class="bridge_numbertext">3 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_bridge3.png" alt="Test the relationship between tensile strength and members' width">
+    <img src="engineering_img\engineering_bridge3.png" alt="Test the relationship between tensile strength and members' width">
 	<div class="caption"><p>Test the relationship between tensile strength and members' width</p></div>
 	</div>
   
 
   <div class="bridge_slides">
     <div class="bridge_numbertext">4 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_bridge4.png" alt="Test the relationship between compression strength and members' length">
+    <img src="engineering_img\engineering_bridge4.png" alt="Test the relationship between compression strength and members' length">
 	<div class="caption"><p>Test the relationship between compression strength and members' length</p></div>
 	</div>
   
 
  <div class="bridge_slides">
     <div class="bridge_numbertext">5 / 5</div>
-    <img src="C:\Users\jiang\Desktop\Website\class_engineering\engineering_bridge5.png" alt='Modeling the bridge'>
+    <img src="engineering_img\engineering_bridge5.png" alt='Modeling the bridge'>
 	<div class="caption"><p>Modeling the bridge'</p></div>
   </div>
 
