--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function typeWriter() {
         <div class="dropdown-content" id='sports-content'>
             <div class="row">
                 <div class="column">
-                    <a href="section_liferecord.html">Field Hockey</a>
+                    <a href="#">Field Hockey</a>
 				</div>
 				<div class="column">
                     <a href='#'>Dance</a>
@@ -135,7 +135,7 @@ function typeWriter() {
             <div class="row">
                 <div class="column">
                     <h3>My Blog</h3>
-					<a href="file:///C:/Users/jiang/Desktop/Website/section_liferecord.html#cook">Cooking</a>
+					<a href="section_liferecord.html">Cooking</a>
 					<a href='#'>Travel</a>
                 </div>
                 <div class="column">
