--- a/section_PingYao.html
+++ b/section_PingYao.html
@@ -92,7 +92,7 @@
 <div class="container">
   <div class="slides">
     <div class="numbertext">1 / 6</div>
-    <img src="pingyao_img\Pingyao_gallery_1.jpg">
+    <img src="pingyao_img\Pingyao_intro_1.jpg">
   </div>
 
   <div class="slides">
