--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ function typeWriter() {
                 <div class="column">
                     <h3>My Blog</h3>
 					<a href="section_liferecord.html">Cooking</a>
-					<a href='#'>Travel</a>
+					<a href='section_liferecord.html'>Travel</a>
                 </div>
                 <div class="column">
                     <h3>Writings</h3>
