--- a/section_fieldhockey.html
+++ b/section_fieldhockey.html
@@ -38,10 +38,10 @@
        </div>
     </header>
 
-    <img id='image1'src="C:\Users\jiang\Desktop\Website\intro_activity.jpg"
+    <img id='image1'src="fieldhockey_img\fieldhockey_1.jpg"
          alt="hockey" />
 
-    <img id='image1'src="C:\Users\jiang\Desktop\Website\stringemsemble_2.jpg"
+    <img id='image1'src="fieldhockey_img\fieldhockey_2.jpg"
          alt="hockey" />
 </body>
 
