--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ function typeWriter() {
         <div class="dropdown-content" id='sports-content'>
             <div class="row">
                 <div class="column">
-                    <a href="#">Field Hockey</a>
+                    <a href="section_fieldhockey.html">Field Hockey</a>
 				</div>
 				<div class="column">
                     <a href='#'>Dance</a>
