--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ function typeWriter() {
                     <a href="section_fieldhockey.html">Field Hockey</a>
 				</div>
 				<div class="column">
-                    <a href='#'>Dance</a>
+                    <a href='section_dance.html'>Dance</a>
                 </div>
             </div>
         </div>
