--- a/section_translator.html
+++ b/section_translator.html
@@ -33,7 +33,7 @@
        </div>
     </header>
 
-    <img id='image1'src="C:\Users\jiang\Desktop\Website\translator_1.jpg"
+    <img id='image1'src="/translator_1.jpg"
     alt="TED" />
 
 
