--- a/section_fieldhockey.html
+++ b/section_fieldhockey.html
@@ -25,7 +25,7 @@
 
     <div class='tab'>
     <div class='dropdown'>
-    <a href='file:///C:/Users/jiang/Desktop/Website/website_index.html'><button>
+    <a href='index.html'><button>
         <i class='fa fa-home'></i> <span></span>Home
     </button></a>
     <div class="dropdown-content">
