--- a/section_translator.html
+++ b/section_translator.html
@@ -24,7 +24,7 @@
     <header>
         <p class='heading'>Iris Yushan Li</p>
         <div class='tab'>
-        <a href='file:///C:/Users/jiang/Desktop/Website/website_index.html'><button>
+        <a href='index.html'><button>
         <i class='fa fa-home'></i> <span></span>Home
         </button></a>
 
