--- a/index.html
+++ b/index.html
@@ -102,9 +102,6 @@ function typeWriter() {
                     <a href="section_PingYao.html">PingYao</a>
                 </div>
                 <div class="column">
-                    <a href="#">Translate books for the Blinds</a>
-                </div>
-                <div class="column">
                     <a href="#">TED Translator</a>
                 </div>
             </div>
@@ -120,9 +117,9 @@ function typeWriter() {
 					<a href='section_liferecord.html'>Travel</a>
                 </div>
                 <div class="column">
-                    <h3>Writings</h3>
+                    <!--<h3>Writings</h3>
                     <a href="#">Poems</a>
-                    <a href="#">Short Stories</a>
+                    <a href="#">Short Stories</a>-->
                 </div>
             </div>
     </div>
