--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ function typeWriter() {
                     <a href="section_PingYao.html">PingYao</a>
                 </div>
                 <div class="column">
-                    <a href="#">TED Translator</a>
+                    <a href="section_translator">TED Translator</a>
                 </div>
             </div>
         </div>
