--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ function typeWriter() {
                  <a href='section_newspaper.html'>Newspaper Club</a>
 				 </div>
 				 <div class="column">
-                 <a href="#">WISTEM (Women STEM Club)</a>
+                 <a href="section_WISTEM">WISTEM (Women STEM Club)</a>
 				 </div>
 				 <div class="column">
                  <a href="section_stringemsemble.html">String Emsemble</a>
