--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     href="C:\Users\jiang\Desktop\Website\index\large_user5492897_3826049_20.ico.jpg" />
     <title>Iris Li's Website</title>
  </head>
-<!--
+
 <header>
      <div class='splash'>
      <body onload='typeWriter()'>
@@ -45,7 +45,7 @@ function typeWriter() {
 }
 </script>
  </body>
- </header>   -->
+ </header>   
 
 <!-- heading -->
 <header>
