--- a/brailleblog.htm
+++ b/brailleblog.htm
@@ -37,7 +37,14 @@
           <div class="blog-container">
     <div class="blog">
         <!-- Blog content for the first post -->
-        <h1><sup>7</sup> / <sub>23</sub><sub class='year'>, 2023</sub></h1>
+        <h1><sup>9</sup> / <sub>8</sub><sub class='year'>, 2023</sub></h1>
+        <video width="320" height="240" controls>
+            <source src="BrailleBlog/meeting_01.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="blog">
+        <!-- Blog content for the first post -->
+        <h1><sup>9</sup> / <sub>11</sub><sub class='year'>, 2023</sub></h1>
            <h2>Braille Dataset</h2>
            <p>To make a machine learning system that can recognize Braille characters
            and translate them into English, we first collected a dataset of Braille characters
