--- a/brailleblog.htm
+++ b/brailleblog.htm
@@ -38,6 +38,7 @@
     <div class="blog">
         <!-- Blog content for the first post -->
         <h1><sup>9</sup> / <sub>8</sub><sub class='year'>, 2023</sub></h1>
+         <h2>My Inspiration for the Braille Translator</h2>
         <video width="320" height="240" controls>
             <source src="BrailleBlog/meeting_01.mp4" type="video/mp4">
         </video>
